dashboard-kind/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: kubernetes-dashboard 
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "https"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  #  #kubernetes.io/ingress.class: "nginx"
  #  nginx.ingress.kubernetes.io/rewrite-target: "/"
  #  nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
  #  nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
  #  nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
  - host: kindui.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
